# python-bangumi

./: LICENSE  README.md  build.ps1  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: coverage_test.yml  pylint.yml
BangumiAPI/: __init__.py
BangumiAPI/entry/: EntryPersons.py  EntryRelations.py
BangumiAPI/lagacy/user/: UserCollection.py
BangumiAPI/user/: User.py
docs/: README.md
pybangumi/: __init__.py  api.py  exceptions.py
pybangumi/abstract/: __init__.py  api.py  data.py
pybangumi/consts/: __init__.py
pybangumi/entry/: Calendar.py  EntryCharacters.py  EntryRelations.py  __init__.py  calendar.py  entry.py  entry_characters.py  entry_persons.py  entry_relations.py
pybangumi/lagacy/user/: UserCollection.py
pybangumi/user/: User.py  __init__.py  user.py  user_data.py
pybangumi/utils/: __init__.py  format_print.py  get_url.py
src/BangumiAPI/: clean.py
src/BangumiAPI/basic/: const.py
src/BangumiAPI/entry/: Calendar.py  Entry.py  EntryCharacters.py  EntryPersons.py  EntryRelations.py
src/BangumiAPI/lagacy/user/: UserCollection.py
src/BangumiAPI/user/: User.py
test/: main.py  test.py  test_entry.py  test_user.py
tests/: test_api.py  test_user.py  test_utils.py
tool/: clean.py
