[tool.poetry]
name = "python-bangumi"
version = "0.1.0"
description = "番组计划开放API的Python模块"
authors = ["WhitePaper233 <whitepaper.233@foxmail.com>"]
repository = "https://github.com/WhitePaper233/BangumiAPI"
license = "MIT"
readme = "README.md"
classifiers = [
    'Programming Language :: Python :: 3.10',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
]
packages = [{ include = "BangumiAPI", from = "src" }]

[tool.poetry.scripts]
clean = "tool.clean:clean_dist"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
